--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,18 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.jtabord4.sellit.LoginActivity">
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+
+
+    <ImageView
+        android:id="@+id/posted_img"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:scaleType="center"
+        android:src="@drawable/monkey"
+        />
 
     <!-- Login progress -->
     <ProgressBar
@@ -19,32 +23,36 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone"/>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"></FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:id="@+id/footer_log"
+        android:layout_alignBottom="@+id/posted_img"
+        android:layout_alignLeft="@+id/posted_img"
+        android:layout_alignRight="@+id/posted_img"
+
+        >
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/plus_sign_in_button"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             />
 
         <com.facebook.widget.LoginButton
             android:id="@+id/facebook_sign_in_button"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="right"
+            android:layout_weight="1"
+
             />
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
 
 
 
