--- a/app/src/main/res/layout/preferences.xml
+++ b/app/src/main/res/layout/preferences.xml
@@ -9,54 +9,49 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Please select your interest in the next list: "
+        android:text="@string/preferencesText"
         android:id="@+id/textView"
         android:layout_weight="0.02"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sports"
+        android:text="@string/sports"
         android:id="@+id/checkBox"
         android:layout_weight="0.07"
-        android:nestedScrollingEnabled="false"
         android:checked="false" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Jewelry"
+        android:text="@string/jewelry"
         android:id="@+id/checkBox2"
         android:layout_weight="0.07"
-        android:nestedScrollingEnabled="false"
         android:checked="false" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Technology"
+        android:text="@string/tech"
         android:id="@+id/checkBox3"
         android:layout_weight="0.08"
-        android:nestedScrollingEnabled="false"
         android:checked="false" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Books"
+        android:text="@string/books"
         android:id="@+id/checkBox4"
         android:layout_weight="0.08"
-        android:nestedScrollingEnabled="false"
         android:checked="false" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Clothes"
+        android:text="@string/clothes"
         android:id="@+id/checkBox5"
         android:layout_weight="0.10"
-        android:nestedScrollingEnabled="false"
         android:checked="false" />
 
     <CheckBox
@@ -64,25 +59,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/checkBox6"
         android:layout_weight="0.09"
-        android:nestedScrollingEnabled="false"
         android:checked="false"
-        android:text="Kids" />
+        android:text="@string/kids" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Beauty"
+        android:text="@string/beauty"
         android:id="@+id/checkBox7"
         android:layout_weight="0.09"
-        android:nestedScrollingEnabled="false"
         android:checked="false" />
 
     <Button
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Agree"
+        android:text="@string/agree"
         android:id="@+id/button2"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:layout_weight="0.02" />
 
 </LinearLayout>
