--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,31 +23,19 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone"/>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/footer_log"
         android:layout_alignBottom="@+id/posted_img"
-        android:layout_alignLeft="@+id/posted_img"
-        android:layout_alignRight="@+id/posted_img"
-
         >
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/plus_sign_in_button"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            />
-
-        <com.facebook.widget.LoginButton
-            android:id="@+id/facebook_sign_in_button"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-
             />
 
     </LinearLayout>
