--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -142,16 +142,11 @@
                             android:id="@+id/tab_published"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            >
 
 
-                            <ImageView
-                                android:id="@+id/posted_img5"
-                                android:layout_height="match_parent"
-                                android:layout_width="match_parent"
-                                android:scaleType="center"
-                                android:src="@drawable/monkey"
-                                />
+
 
 
 
@@ -164,13 +159,7 @@
                             android:layout_height="fill_parent"
                             android:orientation="vertical">
 
-                            <ImageView
-                                android:id="@+id/posted_img6"
-                                android:layout_height="match_parent"
-                                android:layout_width="match_parent"
-                                android:scaleType="center"
-                                android:src="@drawable/monkey"
-                                />
+
 
                         </LinearLayout>
                     </FrameLayout>
